--- a/templates/smartmin/base.html
+++ b/templates/smartmin/base.html
@@ -26,11 +26,20 @@
   function fetchPJAXContent(url, container, options) {
     var type = 'GET';
     var data = undefined;
+    var processData = true;
+    var contentType = 'application/x-www-form-urlencoded; charset=UTF-8';
 
     if (options) {
       if ('postData' in options) {
         type = 'POST';
         data = options['postData'];
+      }
+      
+      if('formData' in options) {
+         type = 'POST';
+         processData = false;
+         data = options['formData'];
+         contentType = false;
       }
     }
 
@@ -57,6 +66,8 @@
       headers: headers,
       type: type,
       url: url,
+      contentType: contentType,
+      processData: processData,
       data: data,
       success: function(response, status, jqXHR) {
         var toast = jqXHR.getResponseHeader('Temba-Toast');
