--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -72,7 +72,11 @@
       }
 
       var filter = event.target.values[0].value;
-      if (filter === "O") {
+      if (filter === "M") {
+        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='mine' %}");
+      } else if(filter === "U") {
+        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='unassigned' %}");
+      } else if(filter === "O") {
         contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='open' %}", focusNext);
       } else {
         contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='closed' %}");
@@ -80,11 +84,22 @@
     }
 
     function handleTicketUpdated(event) {
+
       var ticket = event.detail.ticket;
       var filter = document.querySelector('temba-select[name="ticket-filter"]');
       var contacts = document.querySelector("temba-contacts");
 
-      if (ticket.status == "O") {
+      if (ticket.took) {
+        var selection = filter.value.value;
+        // go to our tickets if we aren't on a useable filter
+        if (selection != "O" && selection != "M") {
+          focusNext = ticket.uuid;
+          filter.setSelection("M");
+        } else {
+          contacts.refresh();
+        }
+
+      } else if (ticket.status == "O") {
         focusNext = ticket.uuid;
         filter.setSelection("O");
       } else {
@@ -104,11 +119,14 @@
     .flex(style="height:100vh;margin-top:-121px;padding-top:121px;margin-bottom:-100px;padding-bottom:100px;")
       .ticket-list.flex.flex-col.m-4.mr-2.pt-4
         %temba-select(name="ticket-filter" onchange="handleFilterChanged(event)")
+          %temba-option(name="My Tickets" value="M" icon="coffee")
+          %temba-option(name="Unassigned" value="U" icon="mail")
           %temba-option(name="Open" value="O" icon="inbox")
           %temba-option(name="Closed" value="C" icon="check")
         
         .flex.flex-grow(style="max-height:100%;margin-bottom:-30px;padding-bottom:30px")
-          %temba-contacts(endpoint="{% url 'tickets.ticket_folder' folder='open' %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
+          %temba-contacts(agent="{{request.user.pk}}" endpoint="{% url 'tickets.ticket_folder' folder='mine' %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
       .flex-grow.flex-col.h-full.py-4.pb-4.pr-4
-        %temba-contact-chat(-temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated")
+        
+        %temba-contact-chat(agent="{{request.user.pk}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated")
