Remove viewers from tickets. Change ticketer names.

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -234,6 +234,7 @@
       onChangeLanguage: handleChangeLanguage,
       mutable: {{mutable|lower}},
       filters: {{feature_filters|to_json}},
+      brand: '{{brand.name|escapejs}}',
 
       help: {
         legacy_extra: 'https://help.nyaruka.com/en/articles/3747485-migrating-away-from-legacy_extra',
