Remove old ticket views

--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -168,8 +168,8 @@
       .title
         -trans "triggers"
 
-  -if org_perms.tickets.ticket_open and not request.user.is_superuser and user_org and user_org.has_ticketer
-    %a{href:"{% url 'tickets.ticket_open' %}", class:"{% active request 'ticket' %}"}
+  -if org_perms.tickets.ticket_list and not request.user.is_superuser and user_org and user_org.has_ticketer
+    %a{href:"{% url 'tickets.ticket_list' %}", class:"{% active request 'ticket' %}"}
       .circle
         .icon-ticket
       .title
