--- a/templates/tickets/ticketer_read.haml
+++ b/templates/tickets/ticketer_read.haml
@@ -2,8 +2,6 @@
 -load smartmin i18n
 
 -block pjax
-  %temba-modax(id="delete-ticketer-{{ object.uuid }}" header='{% trans "Delete Ticket Service" %}')
-
   -blocktrans trimmed with type_name=object.get_type.name name=object.name
     {{ type_name }} ticketing service over <b>{{ name }}</b>. Contacts who have open tickets with this service will have their
     messages forwarded to the service, and replies made using the service will be sent back to the contact.
@@ -13,19 +11,11 @@
       .button-light.mr-3(onclick='goto(event)' href='{% url "request_logs.httplog_ticketer" object.uuid %}')
         -trans "HTTP Log"
     -if org_perms.tickets.ticketer_delete
-      .button-light(onclick='showDeleteTicketerModal("{{ object.uuid }}")')
-        -trans "Remove"
+      %temba-modax(endpoint="{% url 'tickets.ticketer_delete' object.uuid %}" header='{% trans "Delete Ticket Service" %}')
+        .button-light
+          -trans "Remove"
 
 
 -block summary
   -blocktrans trimmed with type_name=object.get_type.name name=object.name
     {{ type_name }} ticketing service over <b>{{ name }}</b>.
-
-
--block extra-script
-  :javascript
-    function showDeleteTicketerModal(uuid) {
-      var modax = document.querySelector(`#delete-ticketer-${uuid}`);
-      modax.endpoint = `/ticketer/delete/${uuid}/`;
-      modax.open = true;
-    }
