--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -38,7 +38,7 @@
       display: inline;
     }
 
-    temba-select[name='ticket-filter'] {
+    temba-select[name='ticket-folder'] {
       margin-bottom: 0.5em;
       margin-top: -1.3em;
     }
@@ -91,9 +91,9 @@
       // tell our chat to refresh since we know things are new in our list
       var chat = document.querySelector("temba-contact-chat");
       var empty = document.querySelector(".empty");
-      var filter = document.querySelector('temba-select[name="ticket-filter"]');
+      var folder = document.querySelector('temba-select[name="ticket-folder"]');
 
-      if (tickets.items.length > 0 || filter.value.value == "C") {
+      if (tickets.items.length > 0 || folder.value.value == "closed") {
         chat.style.opacity = '1';
         chat.refresh();
         empty.style.opacity = '0';
@@ -105,7 +105,7 @@
 
     var focusNext = null;
 
-    function handleFilterChanged(event) {
+    function handleFolderChanged(event) {
       var contacts = document.querySelector("temba-contacts");
       var chat = document.querySelector("temba-contact-chat");
 
@@ -114,37 +114,28 @@
         chat.contact = null;
       }
 
-      var filter = event.target.values[0].value;
-      if (filter === "M") {
-        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='mine' %}");
-      } else if(filter === "U") {
-        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='unassigned' %}");
-      } else if(filter === "O") {
-        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='open' %}", focusNext);
-      } else {
-        contacts.setEndpoint("{% url 'tickets.ticket_folder' folder='closed' %}");
-      }
+      var folder = event.target.values[0].value;
+      contacts.setEndpoint(`/ticket/folder/${folder}/`);
     }
 
     function handleTicketUpdated(event) {
-
       var ticket = event.detail.ticket;
-      var filter = document.querySelector('temba-select[name="ticket-filter"]');
+      var folder = document.querySelector('temba-select[name="ticket-folder"]');
       var contacts = document.querySelector("temba-contacts");
 
       if (ticket.took) {
-        var selection = filter.value.value;
-        // go to our tickets if we aren't on a useable filter
-        if (selection != "O" && selection != "M") {
+        var selection = folder.value.value;
+        // go to our tickets if we aren't on a useable folder
+        if (selection != "open" && selection != "mine") {
           focusNext = ticket.uuid;
-          filter.setSelection("M");
+          folder.setSelection("mine");
         } else {
           contacts.refresh();
         }
 
-      } else if (ticket.status == "O") {
+      } else if (ticket.status == "open") {
         focusNext = ticket.uuid;
-        filter.setSelection("O");
+        folder.setSelection("open");
       } else {
         contacts.refresh();
       }
@@ -161,42 +152,39 @@
   .flex-col
     .flex.widget-container(style="height:100vh;margin-top:-121px;padding-top:121px;margin-bottom:-100px;padding-bottom:100px;")
       .ticket-list.flex.flex-col.m-4.mr-2.pt-4
-        %temba-select(name="ticket-filter" onchange="handleFilterChanged(event)")
-          %temba-option(name='{{_("My Tickets")|escapejs}}' value="M" icon="coffee")
-          %temba-option(name='{{_("Unassigned")|escapejs}}' value="U" icon="mail")
-          %temba-option(name='{{_("Open")|escapejs}}' value="O" icon="inbox")
-          %temba-option(name='{{_("Closed")|escapejs}}' value="C" icon="check")
-        
+        %temba-select(name="ticket-folder" onchange="handleFolderChanged(event)")
+          -for folder in folders
+            %temba-option(name='{{ folder.name }}' value="{{ folder.slug }}" icon="{{ folder.icon }}")
+
         .flex.flex-grow(style="max-height:100%;margin-bottom:-30px;padding-bottom:30px")
           %temba-contacts(agent="{{request.user.pk}}" endpoint="{% url 'tickets.ticket_folder' folder='mine' %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
       .flex-grow.flex-col.h-full.py-4.pb-4.pr-4
         .empty
+          -if has_tickets
+            %h2
+              .popper
+                🎉
 
-            -if has_tickets
-              %h2 
-                .popper
-                  🎉
+              -blocktrans trimmed
+                All done!
+            .mt-4
+              -blocktrans trimmed
+                Nice work, there aren't any more tickets here that need your attention.
 
-                -blocktrans trimmed
-                  All done!
-              .mt-4
-                -blocktrans trimmed
-                  Nice work, there aren't any more tickets here that need your attention.
+          -else
+            %h2
+              -blocktrans trimmed
+                Tickets
 
-            -else            
-              %h2 
-                -blocktrans trimmed
-                  Tickets
+            .mt-6
+              -blocktrans with name=brand.name trimmed
+                {{name}} Tickets makes it easy to chat directly with your contacts.
 
-              .mt-6
-                -blocktrans with name=brand.name trimmed
-                  {{name}} Tickets makes it easy to chat directly with your contacts.
-
-              .mt-4
-                -blocktrans trimmed
-                  Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the 
-                  Open Ticket action to open a new ticket.
+            .mt-4
+              -blocktrans trimmed
+                Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
+                Open Ticket action to open a new ticket.
                   
                   
         %temba-contact-chat(agent="{{request.user.pk}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated")
