Add custom user recover password view

--- a/templates/orgs/login/login.haml
+++ b/templates/orgs/login/login.haml
@@ -29,7 +29,7 @@
       .alert-error.mt-4
         {{form.password.errors}}
     .mt-2.text-right
-      %a(href="/users/user/forget/")
+      %a(href="/user/forget/")
         Forgot your password?
 
     .mt-6
