--- a/templates/contacts/contact_update.haml
+++ b/templates/contacts/contact_update.haml
@@ -14,29 +14,27 @@
       display: inline;
       margin-bottom: -1px;
     }
-    
-    label {
-      margin-bottom: 2px;
-      margin-left: 4px;
-      display: block;
-      font-weight: 400;
-      font-size: 13px;
-      letter-spacing: 0.05em;
-      line-height: normal;
-      color: rgb(119, 119, 119);
-    }
-    
-    .help-text {
-      font-size: 11px;
-      line-height: inherit;
-      color: rgba(0, 0, 0, 0.25);
-      opacity: 1;
-      margin-top: 4px;
-      margin-left: 4px;
-      pointer-events: none;
-      transition: opacity 100ms ease-in-out 0s, margin-top 200ms ease-in-out 0s;
+
+    temba-textinput[name='new_path'] {
+      --temba-textinput-padding: 10px;
+      margin-top:16px;
+      margin-left:5px;
+      width:345px
     }
 
+    .control-group:hover temba-icon.order-helper {
+      visibility: visible;
+    }
+
+    .control-group temba-icon.order-helper {
+      --icon-color: #ccc;
+      cursor:pointer;
+      visibility:hidden;
+      position:absolute;
+      margin-left:-14px;
+      margin-top:1px
+    }
+    
 -block modal-script
   {{block.super}}
 
@@ -63,7 +61,7 @@
         // add a link to increase the priority
         if (!first) {
           var link = 'javascript:moveUp("' + this.id + '");';
-          link = "<div class='flex -mb-12 mt-12 mr-3 order-helper' ><div class='flex-grow'></div><div title='Increase priority' class='icon-arrow-down text-gray-400 linked' onclick='" + link + "'></div></div>"
+          link = "<temba-icon class='order-helper' name='chevron-up' onclick='" + link + "'/>"
           $(this).parents('.control-group').prepend(link);
         }
 
@@ -91,17 +89,13 @@
   // Manual option to add a new URN for this contact
   {% if not user_org.is_anon %}
     <div class="control-group {% if form.errors.new_path %}error{%endif%}">
-      %label.control-label
-        Add Connection
       .controls
         .flex
-          %temba-select#id-urn-scheme.w-64{name:'new_scheme', float:'left'}
+          %temba-select#id-urn-scheme.w-96{name:'new_scheme', float:'left', label:'{{_("Add Connection")|escapejs}}', help_text:'{{_("Add a new way connect with this contact")|escapejs}}'}
             -for key, value in schemes
               <temba-option name='{{value}}' value='{{key}}' {% if form.data.new_scheme == key %}selected{%endif%}></temba-option>
-          %temba-textinput.flex-grow{name:'new_path', type:'text', style:'margin-left:5px;width:345px', value:'{{form.data.new_path}}'}
+          %temba-textinput.flex-grow{name:'new_path', type:'text', value:'{{form.data.new_path}}'}
 
-        .help-text
-          Add a new way connect with this contact
         -if form.errors.new_path
           .alert-error.mt-2
             {{form.errors.new_path}}
