Fix pagination on the webhook results page

--- a/templates/api/webhookresult_list.haml
+++ b/templates/api/webhookresult_list.haml
@@ -36,3 +36,7 @@
               {{ "--" }}
           %td{ style:'text-align: right', nowrap:'true' }
             {% format_datetime obj.created_on %}
+
+  -block paginator
+    -if object_list.count
+      -include "includes/pagination.haml"
