Use usages component with contact field usages modal

--- a/templates/globals/global_usages.haml
+++ b/templates/globals/global_usages.haml
@@ -3,4 +3,4 @@
 
 -block modal
   -block pjax
-    -include "includes/dependencies" with dependencies=dep_flows
+    -include "includes/dependents.haml" with dependents=dep_flows
