--- a/templates/flows/flow_broadcast.haml
+++ b/templates/flows/flow_broadcast.haml
@@ -29,18 +29,18 @@
         %div= warning
 
     .field.recipients-mode
-      -render_field 'recipients_mode'
+      -render_field 'mode'
 
-    .field.omnibox(class='{% if not form.recipients_mode.value == "select" %}hidden{%endif%}')
+    .field.omnibox(class='{% if not form.mode.value == "select" %}hidden{%endif%}')
       -render_field 'omnibox'
 
-    .field.query(class='{% if form.recipients_mode.value == "select" %}hidden{%endif%}')
-      -render_field 'contact_query'
+    .field.query(class='{% if form.mode.value == "select" %}hidden{%endif%}')
+      -render_field 'query'
 
     .start-options.mt-6.ml-2
-      -render_field 'restart_participants'
       -if object.flow_type != 'B'
-        -render_field 'include_active'
+        -render_field 'exclude_in_other'
+      -render_field 'exclude_reruns'
 
 -block form-buttons
   -if send_channel
@@ -60,24 +60,21 @@
       ele.classList.remove(className);
     }
 
-    var modalBody = document.querySelector("#start-flow").shadowRoot
-
+    var modalBody = document.querySelector("#start-flow").shadowRoot;
     var queryField = modalBody.querySelector('.query');
-    var recipientsField = modalBody.querySelector('.omnibox');
-    var modeSelect = modalBody.querySelector("temba-select[name='recipients_mode']");
+    var omniboxField = modalBody.querySelector('.omnibox');
+    var modeSelect = modalBody.querySelector("temba-select[name='mode']");
 
-    if (modeSelect) {
-      modeSelect.addEventListener("change", function(evt) {
-        var selected = evt.target.values[0];
-        if (selected.value === "query") {
-          removeClass(queryField, "hidden");
-          addClass(recipientsField, "hidden");
-        } else {
-          addClass(queryField, "hidden");
-          removeClass(recipientsField, "hidden");
-        }
-      });
-    }
+    modeSelect.addEventListener("change", function(evt) {
+      var selected = evt.target.values[0];
+      if (selected.value === "query") {
+        removeClass(queryField, "hidden");
+        addClass(omniboxField, "hidden");
+      } else {
+        addClass(queryField, "hidden");
+        removeClass(omniboxField, "hidden");
+      }
+    });
 
 
 
