--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -110,6 +110,9 @@ html {
   --temba-textinput-padding: 9px;
   --temba-textinput-font-size: 13px;
 
+  --options-block-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.03);
+  --options-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  
   font-size: var(--font-size);
   font-weight: 300;
   font-family: var(--font-family);
