--- a/templates/includes/dependents.haml
+++ b/templates/includes/dependents.haml
@@ -1,10 +1,12 @@
 -load temba i18n
 
 .dependencies-of-type.mb-2
-  -if not hide_type_name
-    %span.font-normal
-      {{ dependents|first|verbose_name_plural }}
-
+  %span.font-normal
+    {{ dependents|first|verbose_name_plural }}
+  -if warning
+    \-
+    %i
+      {{ warning }}
   .mt-1.ml-8
     %ul.list-disc
       -for obj in dependents|slice:":5"
