--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-
     <title>{{ brand.name }} Problem - Uh oh!</title>
+    <link type="image/ico" rel="shortcut icon" href="/sitestatic/{{ brand.favico }}" />
     <style>
         body {
 	        background-color:#FFFFFF;
@@ -42,11 +42,23 @@
         }
 
     </style>
+
+    {% if brand.slug == "push" %}
+        <style>
+            .logo > img {
+                background-color: #009E96; 
+                padding: 5px;
+                border-radius: 4px;
+            }
+        </style>
+    {% endif %}
 </head>
 <body>
-
+{% if use_weni_layout %}    
+    {% include "weni_500.html" %}
+{% else %}
 <div class="logo">
-<img src="/sitestatic{{ brand.logo }}"/>
+<img src="/sitestatic/{{ brand.logo }}"/>
 </div>
 <div style="text-align: center;">
 <h3>
@@ -66,6 +78,7 @@ It will help us fix this quicker if you
         Please be sure to include your reference number
         <b>{{ request.sentry.id }}</b>
     </div>
+{% endif %}
 {% endif %}
 
 </body>
